--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "file": "^0.2.2",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.8",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^17.0.2",
+    "react-carousel-minimal": "^1.4.1",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.6",
