--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@ckeditor/ckeditor5-react": "^4.0.0",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
-    "@mui/icons-material": "^5.4.2",
+    "@mui/icons-material": "^5.8.2",
     "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.2",
     "@mui/styles": "^5.4.2",
@@ -15,6 +15,7 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
     "file": "^0.2.2",
     "formik": "^2.2.9",
     "html-react-parser": "^1.4.8",
